-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
There's an lnd_timeout calculated as a function of transaction_timeout and retry_count. This is the value displayed by "lnetctl global show". However, each LND may define its own timeout by setting timeout module parameter to a positive value, which overrides the higher-level lnd_timeout defined by LNet.
It is misleading to report only LNet-level timeout. __ Since actual timeout is lnd-specific, it should be reported among the settings per corresponding LND.