lnet/include/uapi/linux/lnet/lnet-dlc.h
@@ -105,6 +105,7 @@ struct lnet_ioctl_config_o2iblnd_tunables {
 	__u32 lnd_fmr_cache;
 	__u16 lnd_conns_per_peer;
 	__u16 lnd_ntx;
+	__u32 lnd_timeout;
 };
 
 struct lnet_ioctl_config_kfilnd_tunables {
@@ -120,6 +121,12 @@ struct lnet_ioctl_config_socklnd_tunables {
 	__u32 lnd_version;
 	__u16 lnd_conns_per_peer;
 	__u16 lnd_pad;
+	__u32 lnd_timeout;
+};
+
+struct lnet_ioctl_config_gnilnd_tunables {
+	__u32 lnd_version;
+	__u32 lnd_timeout;
 };
 
 struct lnet_lnd_tunables {
@@ -127,6 +134,7 @@ struct lnet_lnd_tunables {
 		struct lnet_ioctl_config_o2iblnd_tunables lnd_o2ib;
 		struct lnet_ioctl_config_socklnd_tunables lnd_sock;
 		struct lnet_ioctl_config_kfilnd_tunables lnd_kfi;
+		struct lnet_ioctl_config_gnilnd_tunables lnd_gni;
 	} lnd_tun_u;
 };
 
